fix: image is too big for mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,10 @@
     font-size: 10px;
 }
 
+.blobfish-img{
+    width: 160px;
+}
+
 #__next {
     max-width: 530px;
     margin: 2em auto;
@@ -49,15 +53,17 @@ ul > li > ul {
     padding-top: .25em;
 }
 
-img {
-  max-width: 100%;
-  object-fit: contain;
-}
-
 .sidenote > p {
     margin: 6px 0 0 0;
 }
 
 .no-padding {
     padding: 0;
+}
+
+// ugly but works for now
+@media only screen and (max-width: 496px)  {
+    .blobfish-img {
+        width: 130px;
+    }
 }
